changed some shit

--- a/src/components/jokes/JokeForm.module.css
+++ b/src/components/jokes/JokeForm.module.css
@@ -15,12 +15,14 @@
 
 .control {
   margin-bottom: 0.5rem;
+  
 }
 
 .control label {
   font-weight: bold;
   display: block;
   margin-bottom: 0.5rem;
+  color:#000000
 }
 
 .control input,
